# debrief

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/debrief-action/: README.md  action.yml  package-lock.json  package.json
.github/workflows/: ci-tests.yml  debrief-sample.yml  security-scan.yml
client/: postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
docs/: CONTEXT.md  DEMO_SCRIPT.md  HANDOFF.md  INTEGRATIONS.md  MARKET_CONTEXT.md  RUNBOOK.md  dossier_v2.md
docs/internal/: DEBRIEF_STATE.md
extensions/vscode/: README.md  package.json
integrations/discord/: README.md
integrations/slack/: README.md
script/: build.ts
scripts/: smoke_pta.sh  smoke_test.sh
server/: analyzer-worker-entry.ts  analyzerLog.ts  analyzerRunDir.ts  audit.ts  buildHistory.ts  ci-worker.ts  config.ts  coverage.ts  diffDossier.ts  educationReceptionist.ts  evidence-bundle.ts  index.ts  monitor.ts  routes.ts  runMetrics.ts  runProjectAnalysis.ts  static.ts  storage.ts  validateDossier.ts  verifyClaim.ts  vite.ts  ws.ts
server/__tests__/: coverage.test.ts  educationChainModel.test.ts  monitorDrift.test.ts
server/auth/: api-keys.ts  clerk.ts
server/billing/: credits.ts  routes.ts  stripe.ts  webhook.ts
server/cache/: analysis-cache.ts  run-cache.ts
server/canon/: index.ts
server/claims/: diffDossier.ts  hash.ts  monitorDrift.ts
server/coverage/: scanCoverage.ts  types.ts
shared/: cloneAnalyzeUrl.ts  evidenceChainModel.ts  routes.ts  schema.ts
(+72 files in other folders)
