[project]
name = "program-totality-analyzer"
version = "0.1.0"
description = "Evidence-bound static analysis tool that generates comprehensive technical dossiers for software projects"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.46",
    "jsonschema>=4.26.0",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "typer>=0.23.1",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project.scripts]
pta = "server.analyzer.src.analyzer_cli:app"
