[project]
name = "debrief-analyzer"
version = "0.1.0"
description = "AI-powered codebase analysis and cryptographic verification pipeline for Debrief"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43.0.0",
    "gitpython>=3.1.46",
    "jsonschema>=4.26.0",
    "openai>=2.21.0",
    "python-dotenv>=1.2.2",
    "pygments>=2.20.0",
    "rich>=14.3.2",  # CVE watch: rich pulls pygments — see docs/internal/SECURITY_AUDIT.md
    "typer>=0.24.1",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project.scripts]
# Preferred CLI entry for the Python analyzer (maps to Typer `debrief` / analyze commands).
debrief = "server.analyzer.src.analyzer_cli:app"
# Deprecated: use `debrief` instead; kept for existing scripts and muscle memory.
pta = "server.analyzer.src.analyzer_cli:app"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-mock>=3.14"]
